# blueyes

./: BinanceUs.py  Coinbase.py  Db.py  Dockerfile  Main.py  Oanda.py  README.md  __init__.py  btc-prices.csv  config.ini  config.json  countries.txt  data.json  jub.ipynb  pyproject.toml  setup.sh  userdata.db
.github/workflows/: python-app.yml
BackEnd/Connexion/: Request.py
BackEnd/Users/: User.py
UI/: MainWindow.py  Starter.py  TradingWindow.py
docs/: make.bat
docs/source/: conf.py  index.rst
src/: Db.py  Dockerfile  Main.py  News.csv  News.json  config.ini  countries.txt  data.json  data1.csv  data1.json  data2.csv  data2.json  data3.csv  data3.json  data5.json  data_file.csv  data_final.json  oanda__granularity.csv  wrappers.py
src/BackEnd/: Login.py
src/BackEnd/Connexion/: Binance.py  BinanceUs.py  CoinbasePro.py  Cryptocurrency.py  Currency.py  JsonToCsv.py  Oanda.py  RequestHandler.py
src/BackEnd/Db/: Db.py
src/BackEnd/Person/: Person.py
src/TAcharts/: __init__.py  wrappers.py
src/TAcharts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/TAcharts/utils/: demo_df.py  draw_candlesticks.py  fill_values.py  group_candles.py  ohlcv.py
src/UI/: CandleStickChart.py  ForgotPassword.py  LoginFrame.py  MainWindow.py  MarketDataWindow.py  Navigator.py  News.py  Registration.py  ResetPassword.py
src/ref/: calculating-area.py  pyrenko.py  volatility.py
src/utils/: __init__.py  apply_across.py  area_between.py  crossover.py  demo_df.py  draw_candlesticks.py  group_candles.py  ohlcv.py
tests/: tests.py
